--- a/omega_classification.ipynb
+++ b/omega_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5821,7 +5821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5832,7 +5832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6209,7 +6209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -6224,130 +6224,19 @@
      "output_type": "stream",
      "text": [
       "/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/pyriemann/utils/mean.py:470: UserWarning: Convergence not reached\n",
-      "  warnings.warn('Convergence not reached')\n",
-      "/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/model_selection/_validation.py:794: UserWarning: Scoring failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
-      "Traceback (most recent call last):\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_scorer.py\", line 115, in __call__\n",
-      "    score = scorer._score(cached_call, estimator, *args, **kwargs)\n",
-      "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_scorer.py\", line 282, in _score\n",
-      "    return self._sign * self._score_func(y_true, y_pred, **self._kwargs)\n",
-      "                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_classification.py\", line 1146, in f1_score\n",
-      "    return fbeta_score(\n",
-      "           ^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_classification.py\", line 1287, in fbeta_score\n",
-      "    _, _, f, _ = precision_recall_fscore_support(\n",
-      "                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_classification.py\", line 1573, in precision_recall_fscore_support\n",
-      "    labels = _check_set_wise_labels(y_true, y_pred, average, labels, pos_label)\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_classification.py\", line 1382, in _check_set_wise_labels\n",
-      "    raise ValueError(\n",
-      "ValueError: pos_label=1 is not a valid label. It should be one of ['Control', 'Parkinson']\n",
-      "\n",
-      "  warnings.warn(\n",
-      "/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/model_selection/_validation.py:794: UserWarning: Scoring failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
-      "Traceback (most recent call last):\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_scorer.py\", line 115, in __call__\n",
-      "    score = scorer._score(cached_call, estimator, *args, **kwargs)\n",
-      "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_scorer.py\", line 282, in _score\n",
-      "    return self._sign * self._score_func(y_true, y_pred, **self._kwargs)\n",
-      "                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_classification.py\", line 1146, in f1_score\n",
-      "    return fbeta_score(\n",
-      "           ^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_classification.py\", line 1287, in fbeta_score\n",
-      "    _, _, f, _ = precision_recall_fscore_support(\n",
-      "                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_classification.py\", line 1573, in precision_recall_fscore_support\n",
-      "    labels = _check_set_wise_labels(y_true, y_pred, average, labels, pos_label)\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_classification.py\", line 1382, in _check_set_wise_labels\n",
-      "    raise ValueError(\n",
-      "ValueError: pos_label=1 is not a valid label. It should be one of ['Control', 'Parkinson']\n",
-      "\n",
-      "  warnings.warn(\n",
-      "/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/model_selection/_validation.py:794: UserWarning: Scoring failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
-      "Traceback (most recent call last):\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_scorer.py\", line 115, in __call__\n",
-      "    score = scorer._score(cached_call, estimator, *args, **kwargs)\n",
-      "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_scorer.py\", line 282, in _score\n",
-      "    return self._sign * self._score_func(y_true, y_pred, **self._kwargs)\n",
-      "                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_classification.py\", line 1146, in f1_score\n",
-      "    return fbeta_score(\n",
-      "           ^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_classification.py\", line 1287, in fbeta_score\n",
-      "    _, _, f, _ = precision_recall_fscore_support(\n",
-      "                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_classification.py\", line 1573, in precision_recall_fscore_support\n",
-      "    labels = _check_set_wise_labels(y_true, y_pred, average, labels, pos_label)\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_classification.py\", line 1382, in _check_set_wise_labels\n",
-      "    raise ValueError(\n",
-      "ValueError: pos_label=1 is not a valid label. It should be one of ['Control', 'Parkinson']\n",
-      "\n",
-      "  warnings.warn(\n",
-      "/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/model_selection/_validation.py:794: UserWarning: Scoring failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
-      "Traceback (most recent call last):\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_scorer.py\", line 115, in __call__\n",
-      "    score = scorer._score(cached_call, estimator, *args, **kwargs)\n",
-      "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_scorer.py\", line 282, in _score\n",
-      "    return self._sign * self._score_func(y_true, y_pred, **self._kwargs)\n",
-      "                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_classification.py\", line 1146, in f1_score\n",
-      "    return fbeta_score(\n",
-      "           ^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_classification.py\", line 1287, in fbeta_score\n",
-      "    _, _, f, _ = precision_recall_fscore_support(\n",
-      "                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_classification.py\", line 1573, in precision_recall_fscore_support\n",
-      "    labels = _check_set_wise_labels(y_true, y_pred, average, labels, pos_label)\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_classification.py\", line 1382, in _check_set_wise_labels\n",
-      "    raise ValueError(\n",
-      "ValueError: pos_label=1 is not a valid label. It should be one of ['Control', 'Parkinson']\n",
-      "\n",
-      "  warnings.warn(\n",
-      "/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/model_selection/_validation.py:794: UserWarning: Scoring failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
-      "Traceback (most recent call last):\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_scorer.py\", line 115, in __call__\n",
-      "    score = scorer._score(cached_call, estimator, *args, **kwargs)\n",
-      "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_scorer.py\", line 282, in _score\n",
-      "    return self._sign * self._score_func(y_true, y_pred, **self._kwargs)\n",
-      "                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_classification.py\", line 1146, in f1_score\n",
-      "    return fbeta_score(\n",
-      "           ^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_classification.py\", line 1287, in fbeta_score\n",
-      "    _, _, f, _ = precision_recall_fscore_support(\n",
-      "                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_classification.py\", line 1573, in precision_recall_fscore_support\n",
-      "    labels = _check_set_wise_labels(y_true, y_pred, average, labels, pos_label)\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/storage/store3/work/kachardo/conda_installation/envs/brain_age/lib/python3.11/site-packages/sklearn/metrics/_classification.py\", line 1382, in _check_set_wise_labels\n",
-      "    raise ValueError(\n",
-      "ValueError: pos_label=1 is not a valid label. It should be one of ['Control', 'Parkinson']\n",
-      "\n",
-      "  warnings.warn(\n"
+      "  warnings.warn('Convergence not reached')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'fit_time': array([14.50829363, 12.73718905, 13.65967655, 13.63437462, 14.62702537]),\n",
-       " 'score_time': array([0.10861301, 0.09227562, 0.10133147, 0.09169531, 0.09630775]),\n",
+       "{'fit_time': array([14.09024   , 14.54390454, 15.01948667, 14.55890512, 13.93165112]),\n",
+       " 'score_time': array([0.10700488, 0.095433  , 0.10189652, 0.09250879, 0.0961349 ]),\n",
        " 'test_accuracy_score': array([0.71929825, 0.75438596, 0.80357143, 0.75      , 0.76785714]),\n",
-       " 'test_balanced_accuracy_score': array([0.719375  , 0.759375  , 0.78125   , 0.72395833, 0.75      ]),\n",
-       " 'test_f1_score': array([nan, nan, nan, nan, nan])}"
+       " 'test_balanced_accuracy_score': array([0.719375  , 0.759375  , 0.78125   , 0.72395833, 0.75      ])}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6359,7 +6248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -6368,7 +6257,7 @@
        "0.7590225563909775"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6379,7 +6268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -6388,7 +6277,7 @@
        "0.7467916666666665"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
